@@ -1,3 +1,5 @@
+- isatty() no longer crashes if passed a socket rather than a file.
+
 - Rewrote the GetRexxVar()/SetRexxVar() functions (mostly) in 'C', using available
   code as a reference. The 68k stubs currently only work for the 68k version of
   the library, and a solution for the OS4 build still needs to be found. The code
